<resources>
    <string name="app_name">Hitung Kubus</string>
    <string name="title">Dalam geometri, Kubus adalah bangun ruang tiga dimensi yang dibatasi oleh enam bidang sisi yang kongruen berbentuk bujur sangkar. Kubus memiliki 6 sisi, 12 rusuk, dan 8 titik sudut. Kubus juga disebut dengan Bidang enam beraturan, selain itu kubus juga merupakan bentuk khusus dalam prisma segi empat, Kubus.</string>
    <string name="min">Masukan Bilangan</string>
    <string name="cari">Hitung</string>
    <string name="clear">Hapus</string>
    <string name="positive">Masukan harus bernilai positive.</string>
    <string name="blank">Masukan nilai bilang.</string>
    <string name="hasil_x">Volume: %1$.2f</string>
    <string name="hasil_xx">Luas Sisi: %1$.2f</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Dalam geometri, Kubus adalah bangun ruang tiga dimensi yang dibatasi oleh enam bidang sisi yang kongruen berbentuk bujur sangkar. Kubus memiliki 6 sisi, 12 rusuk, dan 8 titik sudut. Kubus juga disebut dengan Bidang enam beraturan, selain itu kubus juga merupakan bentuk khusus dalam prisma segi empat, Kubus.</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="bagikan">Bagikan</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="bagikan_template">Volume: %1$s\nluas: %2$s</string>
    <string name="histori">Histori</string>
    <string name="input_x">Rusuk: %1$.2f</string>
    <string name="value_x">Volume: %1$.1f - Luas: %2$.1f</string>
    <string name="intro">Hai! selamat datang di aplikasi penghitung Volume dan Luas sisi Kubus</string>
    <string name="share">SHARE</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="nama">nama</string>
    <string name="kampus">kampus</string>
    <string name="alamat">alamat</string>
    <string name="foto">foto</string>
    <string name="judul_aplikasi">Tentang Aplikasi</string>
    <string name="tentang_pembuat">Tentang Pembuat</string>
    <string name="sipembuat">Halo perkenalkan, nama saya %1$s, sekarang saya sedang berkuliah di %2$s, tetapi saya bertempat tinggal di %3$s</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Ayo kembali ke Aplikasi!</string>
    <string name="notif_title">Ayo kembali berhitung</string>
    <string name="notif_text">Coba lagi biar gak bingung</string>
</resources>